--- a/client/src/styles/Card.css
+++ b/client/src/styles/Card.css
@@ -4,6 +4,7 @@
     height: 40vh;
     color: white;
     padding-bottom:10px;
+
 }
 #thumbnail>img{
     /* width: 100%; */
@@ -18,7 +19,7 @@
 #content{
     display: flex;
     justify-content: space-between;
-    width: 40%;
+    width: 38%;
     height: 100%;
     position: relative;
 }
