--- a/client/src/styles/Navbar.css
+++ b/client/src/styles/Navbar.css
@@ -1,24 +1,77 @@
 #nav-bar{
-    background-color: #222222;
-    width:16vw;
+    width: 17vw;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
     color: white;
+    bottom: 0;
+    left:0;
+    /* remember this - position sticky needs some threshold to get activated thus we make top 10px */
+    top:0px;
+    padding-top: 10px;
+    position: sticky; 
+    background-color: #121212;
+    z-index: 5;
+    flex: 1;
+    
+}
+#logo-container{
+    align-self:center;
+    display: flex;
+    align-items: center;
+    padding-left: 10px;
+    padding-top: 3px;
+   
+}
+
+#logo{
+    display: flex;
+    padding-left: 15px;
+    align-items: center;
+    color: white;
+    font-family: "teko";
+    height: 100%;
+    ;
+}
+#logo>h2{
+    padding-left: 2px;
+    font-size: 26px;
+    height: 32px;
+}
+#nav{
+    overflow-y: scroll;
     overflow-x: hidden;
-    max-height: 90vh;
+    max-height: 92vh;
+}
+
+.nav-list{
+    padding-top: 10px;
+    padding-left: 20px;
+    font-weight: 300;
+    overflow-x:hidden ;
     overflow-y: scroll;
 }
-#nav-bar>ul{
-    padding-left:25px;
-}
-#nav-bar>ul>li{
+
+.nav-items{
     list-style: none;
+    cursor: pointer;
     font-size: 14px;
-    padding:8px 0;
+    padding:8px 10px;
     line-height: 1em;
+    border-radius: 10px;
+}
+.nav-items:hover{
+    background-color:#a0a0a02f;
 }
 .nav-icons,span{
     display: inline-block;
-    padding-right:14px;
-    vertical-align: middle;
+    vertical-align:middle;
+}
+.nav-icons{
+    padding:0;
+    margin:0;
+    padding-right: 10px;
 }
 hr{
     text-align: middle;
