--- a/client/src/styles/Searchbar.css
+++ b/client/src/styles/Searchbar.css
@@ -1,42 +1,24 @@
 #search-bar{
-    background-color: #222222;
     color: white;
     display: flex;
     justify-content: space-between;
+   top:0px;
+   position: sticky;
     align-items: center;
-    padding: 5px 26px;
-    height: 8vh;
-    
+    background-color: #121212;
+    padding: 10px 26px;
+    z-index: 4;
 }
-#logo-container{
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    width:12vw;
-    height: 100%;
-}
+
 #icon{
     vertical-align: bottom;
 }
-#logo{
-    padding-left: 0;
-    margin-left: 0;
-    display: flex;
-    align-items: center;
-    color: white;
-    font-family: "teko";
-    height: 100%;
-}
-#logo>h2{
-    padding-left: 2px;
-    font-size: 26px;
-    height: 32px;
-    
-}
 
 #search-area{
+    flex:6;
+    margin: 0 200px;
     display: flex;
-    width: 38vw;
+    width: 42vw;
     height: 2.5em;
 }
 #search-icon{
@@ -51,7 +33,7 @@
     font-size: 16px;
     color: rgb(212, 209, 209);
     background-color: inherit;
-    border: 1px solid rgb(83, 83, 83);
+    border: 1px solid rgba(83, 83, 83, 0.664);
     z-index: 1;
 }
 #search:focus-visible{
@@ -62,15 +44,17 @@
     border-top-right-radius: 18px;
     border-bottom-right-radius: 18px;
     width:16%;
-    background-color: #3b3b3b;
+    background-color: #222222;
     color: white;
     border: 1px solid rgb(83, 83, 83);
     z-index: 0;
 }
 
 #n-icons{
+    flex:1.2;
     display: flex;
-    width: 10%;
+  
+ background-color: #222222;
     justify-content: space-between;
 }
 #icon{
